NOJIRA: make #modalSettings transparent to avoid contrast style issues.

--- a/frontend/scss/_setting.scss
+++ b/frontend/scss/_setting.scss
@@ -1,3 +1,7 @@
+#modalSettings {
+    background-color: transparent !important;
+}
+
 .setting-modal {
     .modal-body {
         padding: 0;
